--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,30 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        {# <link rel="stylesheet" href="{{ asset('assets/bootstrap/bootstrap.css') }}"> #}
         {% block stylesheets %}
         {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
+        <script src="{{ asset('assets/bootstrap/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('assets/bootstrap/bootstrap.bundle.min.js') }}"></script>
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+
     </head>
     <body>
-        {% block body %}{% endblock %}
+      <header>
+        {% include "_partials/_navigation.html.twig" %}
+      </header>
+      <main>
+        {% include "_partials/_flash.html.twig" %}
+
+        {% include "_partials/_actions.html.twig" %}
+        <div class="page-content">{% block body %}{% endblock %}</div>
+      </main>
     </body>
+    <script src="/assets/js/current_date.js"></script>
+    <script src="/assets/js/flashes/flash_messages.js"></script>
+    {% block javascripts %}
+    {% endblock %}
 </html>
