--- a/assets/styles/scss/layout/_table.scss
+++ b/assets/styles/scss/layout/_table.scss
@@ -192,3 +192,64 @@
   }
 }
 
+.table-recap {
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+
+  align-self: flex-start;
+
+  margin: 20px 0;
+
+  column-gap: 15px;
+  cursor: default;
+
+  .table-recap-item {
+
+    width: fit-content;
+    min-width: 175px;
+
+    border: 1px solid $light-grey;
+    border-radius: 7px;
+  
+    padding: 8px;
+
+  
+    &:hover {
+      box-shadow: 0 0 4px $grey;
+      transition: all 0.5s ease;
+    }
+  
+    transition: all 0.5s ease;
+
+    .table-recap-item-title {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      column-gap: 10px;
+
+      h4 {
+        font-size: 20px;
+        text-transform: uppercase;
+      }
+    }
+
+    .table-recap-item-value {
+      text-align: end;
+      font-size: 22px;
+      margin: 0;
+      font-weight: 700;
+      span {
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+
+  }
+
+}
+
