--- a/templates/_partials/_navigation.html.twig
+++ b/templates/_partials/_navigation.html.twig
@@ -8,7 +8,13 @@
         <a 
           href="{{ path(link.href) }}"
           class="nav-link 
-            {% if link.href in app.request.attributes.get('_route') %}active{% endif %} 
+            {% if link.href in app.request.attributes.get('_route') %}active{% else %}
+              {% if link.sub is defined and link.sub is iterable and link.sub|length > 0 %}
+                {% for route in link.sub %}
+                  {% if route.href in app.request.attributes.get('_route') %}active{% endif %}
+                {% endfor %}
+              {% endif %}
+            {% endif %} 
             {% if link.sub is defined and link.sub is iterable and link.sub|length > 0 %}dropdown{% endif %}"
         >{{ link.label }}</a>
         {% if link.sub is defined and link.sub is iterable and link.sub|length > 0 %}
