move flash messages

--- a/assets/styles/scss/layout/_flash.scss
+++ b/assets/styles/scss/layout/_flash.scss
@@ -5,8 +5,8 @@
   gap: 5px;
 
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  top: 5px;
+  right: 5px;
 
   width: 400px;
   background-color: $lighter;
