move flash messages again

--- a/assets/styles/css/app.css
+++ b/assets/styles/css/app.css
@@ -1685,8 +1685,8 @@ nav#main-navigation aside nav.sub-bar aside .sub-nav-link.disabled {
   flex-direction: column;
   gap: 5px;
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  top: 5px;
+  right: 5px;
   width: 400px;
   background-color: #fbfbfb;
 }
